syntax = "proto2";

package ru.sktbelpa.pressure_self_writer;

enum INFO {
    // верися этого протокола
    PROTOCOL_VERSION = 1;

    // идентификатор стенда
    PRESSURE_SELF_WRITER_ID = 0xE006;

    // ИД, преднозначенный для поиска
    ID_DISCOVER = 0xFFFF;

	// магическое число для режима MDProtobuf
    MAGICK = 0x09;
}

// код выполнения операции
enum STATUS {
    // успешное завершение
    OK = 0;

    // недопустимое значение поля
    ERRORS_IN_SUBCOMMANDS = 1;

    PROTOCOL_ERROR = 100;
}

// Общий запрос для поиска
message Request {
    // Идентификатор запроса. Служит для определения пары запрос/ответ
    required uint32             id = 1;
    // id устройства (идентификация)
    required uint32             deviceID = 2;
    // версия протокола запрашивающего
    required uint32             protocolVersion = 3;

    // Запись Настройки
    optional WriteSettingsReq   writeSettings = 10;
}

// Общий ответ сервера
message Response {
    // Идентификатор запроса, которому соответствует этот ответ
    required uint32             id = 1;
    // id устройства
    required uint32             deviceID = 2;
    // версия протокола с которой работает устройство
    required uint32             protocolVersion = 3;
    // общий статус выполнения
    required STATUS             Global_status = 4;
    // таймштамп устройства, когда фактически был сгененрирован ответ
    required fixed64            timestamp = 5;

    // Настройки
    optional SettingsResponse   getSettings = 10;
}

//----------------------------------------------------------------------------

// Запрос записи настроек
message WriteSettingsReq {
	// серийный номер
	optional uint32 				Serial = 1;
	// Время измерения по каналу давления
	optional uint32 				PMesureTime_ms = 2;
	// Время измерения по каналу температуры
	optional uint32 				TMesureTime_ms = 3;
	// Опорная частота
	optional uint32 				Fref = 4;
	
	// enable
	optional bool					PEnabled = 10;
	optional bool					TEnabled = 11;
	
	// Коэффициенты
	optional PCoefficientsSet		PCoefficients = 30;
	optional T5CoefficientsSet		TCoefficients = 31;
}

// Настройки
message SettingsResponse {
	// серийный номер
	required uint32 				Serial = 1;
	// Время измерения по каналу давления
	required uint32 				PMesureTime_ms = 2;
	// Время измерения по каналу температуры
	required uint32 				TMesureTime_ms = 3;
	// Опорная частота
	required uint32 				Fref = 4;
	
	// enable
	required bool					PEnabled = 10;
	required bool					TEnabled = 11;
	
	// Коэффициенты
	required PCoefficientsGet		PCoefficients = 30;
	required T5CoefficientsGet		TCoefficients = 31;
}

//----------------------------------------------------------------------------

// Запрос записи коэфициентов давления
message PCoefficientsSet {
	optional float 					Fp0 = 1;
	optional float					Ft0 = 2;
    repeated float                  A = 10;
}

// Коэфициенты давления
message PCoefficientsGet {
	required float 					Fp0 = 1;
	required float					Ft0 = 2;
    repeated float                  A = 10;
}

// Запрос записи коэфициентов температуры
message T5CoefficientsSet {
	optional float 					T0 = 1;
	optional float					F0 = 2;
    repeated float					C = 10;
}

// Коэфициенты температуры
message T5CoefficientsGet {
	required float 					T0 = 1;
	required float					F0 = 2;
    repeated float					C = 10;
}

//----------------------------------------------------------------------------